--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
 </head>
 <body>
   <div class="form-box">
@@ -98,6 +99,7 @@
     };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
+    const auth = firebase.auth();
 
     const urlParams = new URLSearchParams(window.location.search);
     const codigoIndicado = urlParams.get("codigo");
@@ -179,16 +181,17 @@
     });
 
     function recuperarSenha() {
-      const telefone = prompt("Digite seu telefone cadastrado:");
-      if (telefone) {
-        db.ref("usuarios/" + telefone).once("value").then(snapshot => {
-          if (snapshot.exists()) {
-            const user = snapshot.val();
-            alert("Sua senha cadastrada é: " + user.senha);
-          } else {
-            alert("Telefone não encontrado.");
-          }
-        });
+      const email = prompt("Digite seu e-mail cadastrado:");
+      if (email) {
+        auth.sendPasswordResetEmail(email)
+          .then(() => {
+            alert("Um e-mail de recuperação foi enviado para " + email);
+          })
+          .catch((error) => {
+            alert("Erro ao enviar o e-mail: " + error.message);
+          });
+      } else {
+        alert("E-mail não informado.");
       }
     }
   </script>
