--- a/H.html
+++ b/H.html
@@ -29,7 +29,7 @@
   <div class="notificacao">
     <span class="icone-sino">🔔</span>
     <marquee behavior="scroll" direction="left">
-     Atenção senhores investidores mas daqui uns dias opções de depósito já vai estar liberado para vocês fazer seus investimentos H investe 
+     a partir de depósito ainda não está liberado por enquanto não tem na plataforma espera a liberar 
     </marquee>
   </div>
 
